src/snapshots/nixfmt_rs__ast_format_tests__relative_path.snap
---
source: src/ast_format_tests.rs
description: "./foo/bar"
---
Term
    [0;95;1m([0m Path
        [0;96;1m([0m Ann
            [0;93;1m{[0m preTrivia = fromList [0;35m[[0m[0;35m][0m
            [0;93;1m,[0m sourceLine = Pos [0;92;1m1[0m
            [0;93;1m,[0m value =
                [0;35m[[0m TextPart [0;97;1m"[0m[0;94;1m./foo/bar[0m[0;97;1m"[0m [0;35m][0m
            [0;93;1m,[0m trailComment = Nothing
            [0;93;1m}[0m
        [0;96;1m)[0m
    [0;95;1m)[0m
