src/snapshots/nixfmt_rs__ast_format_tests__string_hash_not_comment.snap
---
source: src/ast_format_tests.rs
description: "''\nfoo ${bar}\n\n# TODO: comment\nbadFiles=$(find ${filteredHead})\n''"
---
Term
    [0;95;1m([0m IndentedString
        [0;96;1m([0m Ann
            [0;93;1m{[0m preTrivia = fromList [0;35m[[0m[0;35m][0m
            [0;93;1m,[0m sourceLine = Pos [0;92;1m1[0m
            [0;93;1m,[0m value =
                [0;35m[[0m
                    [0;36m[[0m TextPart [0;97;1m"[0m[0;94;1mfoo [0m[0;97;1m"[0m
                    [0;36m,[0m Interpolation Term
                        [0;33m([0m Token
                            [0;35;1m([0m Ann
                                [0;36;1m{[0m preTrivia = fromList [0;33;1m[[0m[0;33;1m][0m
                                [0;36;1m,[0m sourceLine = Pos [0;92;1m2[0m
                                [0;36;1m,[0m value = Identifier [0;97;1m"[0m[0;94;1mbar[0m[0;97;1m"[0m
                                [0;36;1m,[0m trailComment = Nothing
                                [0;36;1m}[0m
                            [0;35;1m)[0m
                        [0;33m)[0m
                    [0;36m][0m
                [0;35m,[0m [0;36m[[0m[0;36m][0m
                [0;35m,[0m
                    [0;36m[[0m TextPart [0;97;1m"[0m[0;94;1m# TODO: comment[0m[0;97;1m"[0m [0;36m][0m
                [0;35m,[0m
                    [0;36m[[0m TextPart [0;97;1m"[0m[0;94;1mbadFiles=$(find [0m[0;97;1m"[0m
                    [0;36m,[0m Interpolation Term
                        [0;33m([0m Token
                            [0;35;1m([0m Ann
                                [0;36;1m{[0m preTrivia = fromList [0;33;1m[[0m[0;33;1m][0m
                                [0;36;1m,[0m sourceLine = Pos [0;92;1m5[0m
                                [0;36;1m,[0m value = Identifier [0;97;1m"[0m[0;94;1mfilteredHead[0m[0;97;1m"[0m
                                [0;36;1m,[0m trailComment = Nothing
                                [0;36;1m}[0m
                            [0;35;1m)[0m
                        [0;33m)[0m
                    [0;36m,[0m TextPart [0;97;1m"[0m[0;94;1m)[0m[0;97;1m"[0m
                    [0;36m][0m
                [0;35m,[0m [0;36m[[0m[0;36m][0m
                [0;35m][0m
            [0;93;1m,[0m trailComment = Nothing
            [0;93;1m}[0m
        [0;96;1m)[0m
    [0;95;1m)[0m
